Fix horizontal scroll

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -7,7 +7,9 @@ html {
       overflow-wrap: break-word;
     }
 }
-
+main {
+  overflow-x: hidden;
+}
 .dg {
 
   &-text {
